--- a/helm-sources/first-app/values.yaml
+++ b/helm-sources/first-app/values.yaml
@@ -59,17 +59,17 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
-#pvc:
-#  storage_class: nfs-app
-#  storage_size: 100Mi
+pvc:
+  storage_class: nfs-app
+  storage_size: 100Mi
 
-#volumeMounts:
-#  - name: persistent-storage
-#    mountPath: "/var/www/html"
-#volumes:
-#  - name: persistent-storage
-#    persistentVolumeClaim:
-#      claimName: pv-claim-helm
+volumeMounts:
+  - name: persistent-storage
+    mountPath: "/var/www/html"
+volumes:
+  - name: persistent-storage
+    persistentVolumeClaim:
+      claimName: pv-claim-helm
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -100,14 +100,14 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: []
+#volumes: []
 # - name: foo
 #   secret:
 #     secretName: mysecret
 #     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
+#volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
